# GenericSolver

./: .gitignore  AStar.h  AStar2.h  AStar_v1.h  BFS.h  BestFS.h  BestFS2.h  BestFS_V1.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  Cell.h  ClientHandler.cpp  ClientHandler.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  ISearcher.h  MatrixClientHandler.cpp  MatrixClientHandler.h  MatrixMaze.h  MatrixSolver.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  README.md  SearchSolver.h  Searchable.h  Searcher.h  SearcherInterface.h  Server.cpp  Server.h  Solution.h  Solver.cpp  Solver.h  (+6 more)
assets/: details.txt  log.txt
assets/10-Matrix-Solution/: AStar.txt  BFS.txt  BestFS.txt  DFS.txt  parallel_tester.py
assets/Matrix-Client-python2/: parallel_tester.py
